dev/POCO/TEST/POS/PARRAY01.POC
/* Test handling near the limit of array dimensions allowed */
#pragma poco echo "expect>Success"

char pt[2];

main()
{
pt[1] = 16;

if (pt[1] == 16)
	printf("Success");
}
